# piper_rs

./: .gitignore  Cargo.toml  README.md  main.rs
coordinator/: Cargo.toml
coordinator/src/: lib.rs
coordinator/tests/: 01-register-pipeline.rs  02-heterogenous-pipelines.rs  progress.rs
crates/coordinator/: Cargo.toml
crates/coordinator/src/: lib.rs
crates/coordinator/tests/: 01-register-pipeline.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: lib.rs
crates/pipeline/tests/: 02-missing-attribute.stderr  03-generate-pipeline.rs  05-adapt-result-type.rs  ??-implicit-error-type.rs
crates/schema/: Cargo.toml
examples/: Cargo.toml
examples/src/: dev.rs
pipeline/: Cargo.toml
pipeline/src/: lib.rs
pipeline/tests/: 01-parse.rs  02-missing-attribute.rs  03-generate-pipeline.rs  04-run-pipeline.rs  05-adapt-result-type.rs  06-check-retries.rs  progress.rs
schema/: Cargo.toml
schema/src/: lib.rs
