[package]
name = "coordinator"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false
rust-version="1.75"

[lib]
doctest = false

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
schema = {path = "../schema" }
